--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,15 +9,14 @@
     </head>
     <body>
     <div class="page-header">
+		{% if user.is_authenticated %}
+			<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+		{% endif %}
         <h1><a href="/">Kevin Tabunan Hernando</a></h1>
     </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
+    <div class="container">
             {% block content %}
             {% endblock %}
-            </div>
-        </div>
     </div>
 </body>
 </html>
