--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -60,7 +60,7 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
-.p { 
+p { 
 	color: #685206; font-family: 'Helvetica Neue', sans-serif; 
 	font-size: 14px; 
 	line-height: 24px; 
