--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -5,22 +5,38 @@
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
+	  <table class="table table-bordered" style="width:30%; margin:auto;">
+	   <thead>
+		<form method="post" action="{% url 'login' %}" style="margin:0" >
+		{% csrf_token %}
+		{% if next %}
+            <input type="hidden" name="next" value="{{ next }}" />
+        {% endif %}
+		<tr>
+		 <th align="center" style="background-color:#8a00e6; align:center;">
+			<h1 id="site-name"><a href="/accounts/login/">Administration Form</a></h1>
+		 </th>
+		</tr>
+	   </thead>
+	   <tbody>
+		<tr>
+		 <td>
+            <label class="control-label" for="username">Username :</label>
+                <input class="form-control" type="text" id="username" name="username"  placeholder="Username" required style="margin-top:5px; margin-bottom:5px;">
+		 </td>
+		</tr>
+		<tr>
+		 <td>
+            <label class="control-label" for="password">Password :</label>
+                <input class="form-control" type="password" name="password" id="password" placeholder="Password" required style="margin-top:5px; margin-bottom:5px;">
+		 </td>
+		</tr>
+		<tr>
+		 <td>
+            <button type="submit" class="btn btn-primary" style="width:100%">Login</button>
+		 </td>
+		</tr>
+		</form>
+	   </tbody>
+	  </table>
 {% endblock %}
